# astra

./: .gitignore  CMakeLists.txt  README.md
client/: client.py
lib/: CMakeLists.txt
lib/clsocket/src/: SimpleSocket.cpp
server/: CMakeLists.txt  block.cpp  block.h  main.cpp  server.cpp  server.h
